  o dcCallF(), dcVCallF(), dcArgF() and dcVArgF() don't implicitly call dcReset()
    anymore, which was unflexible (breaking change)
  o added macros to feature test implementation for aggregate-by-value and syscall support
  o windows/x64/masm directives added to specify how stack unwinds (help for
    debuggers, exception handling, etc.; thanks Raphael Luba)
dyncallback:
  o stack unwinding debug help on windows... @@@@@@@@@@@@@@@@@@@@ (thanks Raphael Luba!)
  o aggregate-by-value (struct, union) support for x64 (win and sysv; thanks Raphael Luba!)
  o new aggregate arg interface DCaggr
  o windows/x64/masm directives added to specify how stack unwinds (help for
    debuggers, exception handling, etc.; thanks Raphael Luba)
dynload:
  o build fix for ReactOS with RosBE/cmake/mingw-make environment
tests:
  o call_suite: simplified and extended to test also unsigned types, and _Bool
  o callback_suite: refactored to be much more like call_suite test
  o call_suite_aggrs: new test suite for calls with aggregate arguments and
    return types (structs, unions and arrays as aggregate members)
  o callback_suite_aggrs: new test suite, like call_suite_aggrs but for callbacks
  o simplifications and refactoring to share more code (especially signature
    and case generator) across test suites
doc:
  o callconv section additions about aggregate-by-value passing for all platforms
  o new Linux-Std-Base-specific PPC32/SysV section, as aggregate retval handling differs from
    default SysV for such systems
  o man page changes/additions to document new aggregate interfaces
  o replaced API description in manual with references to the manpages, to
    avoid duplication and keeping things in sync
  o general clarifications and cleanup


Version 1.3 (2021/12/17)

  o introduced version macro (see dyncall/dyncall_version.h)
dyncall:
  o fixed broken return values w/ arm32/thumb mode (only affected some platforms)